@startuml
!include style.puml

title Linking, refined

state Linking {
  [*]         --> Scanning
  Scanning    --> Connecting  : ScanMatch /\nidentity when present
  Connecting  --> Bonding     : Connected
  Bonding     --> Discovering : Bonded
  Discovering --> Configuring : ServicesDiscovered
  Configuring --> Subscribed  : MtuSettled and\nCccdConfirmed
  Discovering --> Scanning    : ServiceChanged /\nrediscover
  Subscribed  --> [*] : STATUS identity\nmatches
}

Linking --> Authenticating : StatusRead match

note right of Linking
  Every substate has a timeout.
  Expiry leaves Linking for Recovering,
  which is elided here; see the top-level
  diagram.
end note

note bottom of Linking
  Subscribed means the transport is usable
  and notifications are confirmed enabled.
  STATUS is then read for identity;
  Authenticating is unreachable until
  it matches. No L3 traffic before that.
end note

@enduml
